[tool.poetry]
name = "imei-checker-bot"
version = "0.1.0"
description = "imei-checker-bot - бот для проверки imei телефона."
authors = ["Arduinum <message.chaos628@gmail.com>"]
readme = "README.md"
packages = [{ include = "imei_checker_bot" }]

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.17.0"
alembic = "^1.14.1"
asyncpg = "^0.30.0"
pydantic-settings = "^2.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
imei-checker-bot = "imei_checker_bot.main:main"